<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.exlibris_project.booklist_tfg.ui.Inicio.InicioFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.exlibris_project.booklist_tfg.ui.listadoLecturas.ListadoLecturasFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_listadolecturas" />

    <fragment
        android:id="@+id/nav_anadir"
        android:name="com.exlibris_project.booklist_tfg.ui.anadir.AnadirFragment"
        android:label="@string/menu_anadir"
        tools:layout="@layout/fragment_anadir" />
    <fragment
        android:id="@+id/nav_estadisticas"
        android:name="com.exlibris_project.booklist_tfg.ui.estadisticas.EstadisticasFragment"
        android:label="@string/menu_estadisticas"
        tools:layout="@layout/fragment_estadisticas" />
</navigation>