<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_peq"
        android:orderInCategory="100"
        android:title="peq"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_configuracion"
        android:orderInCategory="100"
        android:title="@string/action_configuracion"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_objetivo"
        android:orderInCategory="100"
        android:title="@string/action_objetivo_lectura"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_busqueda_avanzada"
        android:orderInCategory="100"
        android:title="@string/action_busqueda_avanzada"
        app:showAsAction="never" />
</menu>