<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listadoLecturasFL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Inicio.InicioFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">


        <TextView
            android:id="@+id/idTVTituloLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/idTVFiltroLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVTituloLL"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/label_filtros"
            android:textAlignment="center"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/idLinearFiltro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVFiltroLL"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="8dp"
            android:background="#80FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <CheckBox
                android:id="@+id/idCBFavoritoLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_favoritos"/>

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/idCBPapelLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_book"
                android:text="@string/label_papel" />

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/idCBDigitalLL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/ic_digital"
                android:text="@string/label_digital" />

            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/label_anio"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/idEdtAnio"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="" />

            <ImageButton
                android:id="@+id/idBtnAnio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_edit_calendar" />

        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idRVMostrarListaLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idLinearFiltro"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="8dp"
            android:padding="5dp" />

        <ProgressBar
            android:id="@+id/idCargaPB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />
    </RelativeLayout>
</FrameLayout>