<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anadirFL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.exlibris_project.booklist_tfg.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/idTvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:text="@string/titulo_anadir_lectura"
            android:textSize="20dp" />

        <!-- Linear Layout para el EditText y el botón -->
        <LinearLayout
            android:id="@+id/idLLsearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="50dp">

            <!-- EditText para la búsqueda de libros -->
            <EditText
                android:id="@+id/idEdtSearchBooks"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/hint_introduce"
                android:text="" />

            <!-- Botón de búsqueda -->
            <Button
                android:id="@+id/idBtnSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/label_buscar" />

        </LinearLayout>

        <!--recycler view for displaying our list of books-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/idRVBooks"
            android:layout_width="385dp"
            android:layout_height="485dp"
            android:layout_below="@id/idLLsearch"
            android:layout_marginTop="50dp" />

        <!--progressbar for displaying our loading indicator-->
        <ProgressBar
            android:id="@+id/idLoadingPB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>
</FrameLayout>