<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_autoria"
            />

        <EditText
            android:id="@+id/idETAutoria"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:id="@+id/idBtnBuscarAutoria"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_buscar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_genero_literario" />

        <EditText
            android:id="@+id/idETGenero"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="" />

        <ImageButton
            android:id="@+id/idBtnBuscarGenero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_buscar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_editorial" />

        <EditText
            android:id="@+id/idETEditorial"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="" />

        <ImageButton
            android:id="@+id/idBtnBuscarEditorial"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_buscar" />

    </LinearLayout>

</LinearLayout>
